--- a/src/WebApp.5.0.0/WebApp/Views/com.Sconit.Web.Controllers.MD/location/_Edit.cshtml
+++ b/src/WebApp.5.0.0/WebApp/Views/com.Sconit.Web.Controllers.MD/location/_Edit.cshtml
@@ -10,6 +10,7 @@
                 @Html.HiddenFor(model => model.CreateDate)
                 @Html.HiddenFor(model => model.LastModifyUserName)
                 @Html.HiddenFor(model => model.LastModifyDate)
+                @Html.HiddenFor(model => model.PartSuffix)
             <div class="editor-label-2">
                 @Html.LabelFor(model => model.Code)
             </div>
