--- a/src/WebApp.5.0.0/WebApp/Views/com.Sconit.Web.Controllers.MD/location/_Edit.cshtml
+++ b/src/WebApp.5.0.0/WebApp/Views/com.Sconit.Web.Controllers.MD/location/_Edit.cshtml
@@ -82,7 +82,7 @@
             <div class="editor-field-2">
                 @Html.EditorFor(model => model.IsConsignment)
             </div>
-            <input id="PartSuffix" name="PartSuffix" value="0" type="hidden" />
+            @*<input id="PartSuffix" name="PartSuffix" value="0" type="hidden" />*@
         </div>
         <div class="editor-footer">
             @*<input type="submit" id="btnSave" value="@Resources.SYS.Global.Button_Save" />
