--- a/src/WebApp.5.0.0/WebApp/Views/com.Sconit.Web.Controllers.ORD/ScrapMiscOrder/New.cshtml
+++ b/src/WebApp.5.0.0/WebApp/Views/com.Sconit.Web.Controllers.ORD/ScrapMiscOrder/New.cshtml
@@ -79,7 +79,8 @@
             "ReferenceDocumentsType": $("#ReferenceDocumentsType").val(),
             "ReferenceNo": $("#ReferenceNo").val(),
             "QualityType": $("#QualityType").val(),
-            "IsScanHu": $('#IsScanHu').is(":checked")
+            "IsScanHu": $('#IsScanHu').is(":checked"),
+            "IsCs": $('#IsCs').is(":checked")
         }
 
         var sequences = "";
@@ -113,7 +114,7 @@
         $.ajax({
             type: "post",
             dataType: "text",
-            url: "/CostCenterMiscOrder/CreateMiscOrder/",
+            url: "/ScrapMiscOrder/CreateMiscOrder/",
             data: $.extend(miscmstr, made),
             cache: false,
             success: function (data) {
@@ -134,7 +135,7 @@
         $.ajax({
             type: "get",
             dataType: "html",
-            url: "/CostCenterMiscOrder/New/",
+            url: "/ScrapMiscOrder/New/",
             data: data,
             cache: false,
             success: function (data, textStatus) {
@@ -156,22 +157,41 @@
             $('#fieldsetEditNew').show();
         }
     }
+    
 
     function MoveType_Change(e) {
+        var costCenterCb = $('#CostCenter').data('tComboBox');
         if (e.value === 'Z21' || e.value === 'Z22') {
-            $('#CostCenterDesc').val('211[炼胶车间]');
-            $('#CostCenter').val('211')
+            costCenterCb.dataBind([
+                { Text: "211[炼胶车间]", Value: "211" }
+            ])
+//            $('#CostCenterDesc').val('211[炼胶车间]');
+//            $('#CostCenter').val('211')
         }
         else if (e.value === 'Z23' || e.value === 'Z24') {
-            $('#CostCenterDesc').val('212[密封条车间]');
-            $('#CostCenter').val('212')
+            costCenterCb.dataBind([
+                { Text: "212[密封条车间]", Value: "212" }
+            ])
+//            $('#CostCenterDesc').val('212[密封条车间]');
+//            $('#CostCenter').val('212')
         }
         else if (e.value === 'Z25' || e.value === 'Z26') {
-            $('#CostCenterDesc').val('213[后加工车间]');
-            $('#CostCenter').val('213')
+            costCenterCb.dataBind([
+                    { Text: "213[本部后加工车间]", Value: "213" },
+                    { Text: "214[香花桥后加工车间]", Value: "214" },
+                    { Text: "215[久远路后加工车间]", Value: "215" }
+                ])
+//            $('#CostCenterDesc').val('213[后加工车间]');
+//            $('#CostCenter').val('213')
         }
     }
 
+    $(document).ready(function () {
+        var costCenterCb = $('#CostCenter').data('tComboBox');
+        costCenterCb.dataBind([
+                { Text: "211[炼胶车间]", Value: "211" }
+            ])
+    });
 </script>
 <fieldset>
     <legend>@Resources.ORD.IpMaster.IpMaster_BaseInfo</legend>
@@ -235,8 +255,9 @@
             @Html.LabelFor(model => model.CostCenter)
         </div>
         <div class="editor-field-2">
-            <input type="text" disabled="disabled" id="CostCenterDesc" name="CostCenterDesc" value="211[炼胶车间]" />
-            <input type="hidden" id="CostCenter" name="CostCenter" value="211"  />
+            @*<input type="text" disabled="disabled" id="CostCenterDesc" name="CostCenterDesc" value="211[炼胶车间]" />
+            <input type="hidden" id="CostCenter" name="CostCenter" value="211"  />*@
+            @Html.Telerik().ComboBox().Name("CostCenter")
         </div>
         @*<div class="editor-label-2">
             @Html.LabelFor(model => model.GeneralLedger)
